app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.cagri.com
    secretName: tls-grafana
  rules:
  - host: "www.cagri.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: phonebook-service
            port:
              number: 80
  - host: "www.cagri.com"
    http:
      paths:
      - pathType: Prefix
        path: "/result"
        backend:
          service:
            name: result-service
            port:
              number: 80
